src/objects/InvoiceStatement__c.object
<CustomObject>
    <description>インボイス明細</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>説明を表示</description>
        <label>説明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceValue__c</fullName>
        <label>インボイス金額</label>
        <summarizedField>LineItem__c.Value__c</summarizedField>
        <summaryForeignKey>LineItem__c.InvoiceStatement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OuterUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>承認者ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OuterUserRel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>状況を表示します。</description>
        <label>状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>オープン</fullName>
                    <default>true</default>
                    <label>オープン</label>
                </value>
                <value>
                    <fullName>クローズ</fullName>
                </value>
                <value>
                    <fullName>交渉中</fullName>
                </value>
                <value>
                    <fullName>ペンディング</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>インボイス明細</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_InvoiceStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>